SPA-Deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: deployment-name
spec:
  replicas: 1
  template:
    metadata:
      labels:
        label-key : label-value
    spec:
      containers:
        - name: deploment-container-name
          image: riteshmaurya/mynginx:v1
          imagePullPolicy: Always
          ports:
          - containerPort: 80
