ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: happy.k8s.io
  - http:
      paths:
      - path: /spa
        backend:
          serviceName: service-name
          servicePort: 80
